feat: check `gh-contributors` and `dao-voters` groups membership (#37)
* feat: check `gh-contributors` and `dao-voters` membership  (#36)

* feat:test: get orgs with repos and voters

* feat:test: split a time range in chunks

* refactor: get gh names by space ids

Rename field in gql query directly

* feat:test: get ids of the snapshot spaces an address voted for

Query by address instead of by space ids

* refactor: rename space keys when fetching them from snapshot rest api

* refactor getSpaces and getGhOrgs

* refactor: return object from getGhNamesBySpaceIds

* refactor: rename splitArray to split. Remove splitTimestamps fn

* remove gh, daos, snapshot & scripts folders

* add test.unit nps script

* feat:test: exclude orgs from an ignore list

* remove getGhOrgs method

* remove GroupService.ts

* refactor: accept ghName to be null

Because of prisma schema definition

* refactor `getOrgsWithRepos`

Make 1 call to get spaces gh names

* fix unit and integration tests

* update prisma schema (ghName optional)

* fix: fetch first 1000 spaces in getGhNamesBySpaceIdsQuery

* fix e2e and integration tests

* refactor:test: get whitelist short return `{ daos, repos }`

* feat:test: add GET `/whitelist/{daos,repos}` endpoints

* feat:test: can check wether a user belongs to voters group

* refactor whitelist service

* add `/whitelist/{daos,repos}` to app router

* format

* feat: add `/belongs-to-*-group` endpoints

* restructure endpoints

* update openapi spec

* Update README

* format

* fix: remove parameters from /whitelist/repos openapi spec
