# src/controllers/Whitelist/index.ts
@@ -18,4 +18,14 @@ export class WhitelistController implements WhitelistControllerInterface {
     )
     res.json(orgs)
   }
+
+  async getWhitelistedDaos(_: Request, res: Response): Promise<void> {
+    const daos = await this.whitelistService.getWhitelistedDaos()
+    res.json(daos)
+  }
+
+  async getWhitelistedRepos(_: Request, res: Response): Promise<void> {
+    const repos = await this.whitelistService.getWhitelistedRepos()
+    res.json(repos)
+  }
 }
